[package]
name = "myelin-engine"
description = """
This crate contains the physical engine of
the simulation, as well as the objects that reside
within it"""
version = "0.12.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
repository = "https://github.com/myelin-ai/engine"
homepage = "https://github.com/myelin-ai/engine"
documentation = "https://docs.rs/myelin-engine"
edition = "2018"
license = "MIT/Apache-2.0"
keywords = [ "simulation", "2d", "physics" ]

[dependencies]
myelin-geometry = "2.4"
nalgebra = "0.18"
ncollide2d = "0.19"
serde = { version = "1.0", features = ["derive"] }
alga = "0.9"
nameof = "1.0"
mockiato = { version = "0.5", optional = true }
nearly_eq = { version = "0.2", optional = true }

[dependencies.nphysics2d]
version = "0.11"
default-features = false
features = ["use-wasm-bindgen"]

[dev-dependencies]
mockiato = "0.5"
nearly_eq = "0.2"

[features]
use-mocks = ["mockiato", "nearly_eq"]

[badges]
travis-ci = { repository = "myelin-ai/engine", branch = "master" }
codecov = { repository = "myelin-ai/engine", branch = "master", service = "github" }
